--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>uglyHTML</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,6 +15,7 @@
     <div class="top">
         <header>
             Generic Watches Site
+            
         </header>
         <h3>
             Your one stop website for all things "watch"
