--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>uglyHTML</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Unica+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis|Unica+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
