--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="all_watches_container">
 
         <article class="watch_container">
-            <img src="assets/classicWatch.png" alt="Classic Watch">
+            <img src="assets/classicWatch.png" alt="Classic Watch" id="watches">
             <div class="text">
 
                 <h2>
@@ -61,7 +61,7 @@
             </div>
         </article>
         <article class="watch_container">
-            <img src="assets/mechanicalWatch.png" alt="Mechanical Watch">
+            <img src="assets/mechanicalWatch.png" alt="Mechanical Watch"  id="watches">
 
             <div class="text">
 
@@ -88,7 +88,7 @@
         </article>
 
         <article class="watch_container">
-            <img src="assets/pocketWatch.png" alt="Pocket Watch">
+            <img src="assets/pocketWatch.png" alt="Pocket Watch" id="watches">
             <!-- secret #2 = E -->
             <div class="text">
 
